SEC-1150: Update Contacts sample to use modernized Spring MVC controllers